delete requirement API
